--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="assets/css/style.css">
-  <title>Gemma Wood // Designer & Developer</title>
+  <title>Gemma Wood - Designer & Developer</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;700&display=swap" rel="stylesheet">
@@ -20,7 +20,7 @@
     <a href="#home">Home</a>
     <a href="#about">About Me</a>
     <a href="#work">My Works</a>
-    <a href="#contact">Contact</a>
+    <a href="#contacts">Contacts</a>
     </nav>
 
   </header>
@@ -36,8 +36,7 @@
   <main>
     <!-- about me -->
     <section class="page-section">
-
-      <section id="pic-about">
+     <section id="pic-about">
       <img src="assets/images/gemma-profile-pic.png" alt="profile picture" class="pro-pic">
       <h2 id="about">About Me</h2>
       </section>
@@ -54,7 +53,7 @@
 
       <h2 id="work">Work</h2>
       <!-- grid -->
-      <section id="works">
+      <section id="work">
 
       <a href="https://github.com/Gemma-Wood/horiseon-code-refactor.git" id="horiseon" class="gridArea" target="_blank"><div class="heading">Horiseon</div></a>
       <a href="https://github.com/Gemma-Wood/prework-study-guide.git" id="prework" class="gridArea" target="_blank"><div class="heading">Prework</div></a>
@@ -72,14 +71,14 @@
 
       <section id="contacts">
       
-      <a href="07920103836" target="_blank"><img src="assets/images/phone.png" alt="phone small white icon"></a>
-      <a href="msgemmawood@gmail.com" target="_blank"><img src="assets/images/email.png" alt="email small white icon"></a>
+      <a href="07920103836" target="_blank">
+      <a href="msgemmawood@gmail.com" target="_blank">
       <a href="https://github.com/gemma-wood" target="_blank"><img src="assets/images/github.png" alt="github small white icon"></a>
       </section>
     </section>
   </main>
 
-  <hr style="border: none; height: 2px; background-color: #c71145;"/>
+  <hr style="border: none; height: 2px; background-color: #ec225c;"/>
   <!-- footer -->
   <footer class="footer">
     <h3> Created by <a href="https://github.com/gemma-wood">Gemma Wood</a> </h3>
